[package]
name = "tomayto"
version = "0.1.0"
authors = ["Andrew Fields <andy@andybug.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
